--- a/templates/account_details.html
+++ b/templates/account_details.html
@@ -25,7 +25,7 @@ content %}
 
 
 <form action="{{ url_for('views.account') }}" method="POST" enctype="multipart/form-data">
-  <h3>Account Information</h3> <br>
+  <h3>Account Information / Invoice Details</h3> <br>
   <h5>Update chosen fields and click 'Update':</h5>
 
   <div class="form-group">
